--- a/style.css
+++ b/style.css
@@ -1,43 +1,49 @@
-/* *{
-margin: 0;
-padding: 0;
-} */
-body{
-    /* position: relative; */
-    background-color: #fff;
-    justify-content: center;
-    align-items: center;
+.out{
     display: flex;
+    height: 100vh;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* background-color: #fff; */
 }
+.wrap{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+/* *{
+    margin: 0;
+    padding: 0;
+} */
 .card{
-   position: absolute;
-   top:25px;
-   width: 500px;
-   min-height: 400px;
-   background: url("card.jpg") no-repeat;
-   background-size: contain;
-   padding-left: 7%;
-   padding-bottom: 10px;
-   margin-bottom: 0;
-   z-index: 5;
-   transform:scale(0.1);
-   transition: transform 1s ease ;
-   -webkit-transition: transform 1s ease ;
-   -moz-transition: transform 1s ease ;
-   -ms-transition: transform 1s ease ;
-   -o-transition: transform 1s ease ;
-   -webkit-transform:scale(0.1);
-   -moz-transform:scale(0.1);
-   -ms-transform:scale(0.1);
-   -o-transform:scale(0.1);
+   /*position: absolute;
+   *//*top:25px;
+   */width: 70vw;
+   /*min-height: 400px;
+   */background: url("card.jpg") no-repeat;
+   background-size: cover;
+   padding-left: 5%;
+   /*padding-bottom: 10px;
+   *//*padding-left:5px;
+   *//*margin-bottom: 0;
+   */z-index: 5;
+   transform:scale(0.1,0.1) ;
+   transition: transform 10000ms ease-in-out ;
+   -webkit-transform:scale(0.1,0.1) ;
+   -moz-transform:scale(0.1,0.1) ;
+   -ms-transform:scale(0.1,0.1) ;
+   -o-transform:scale(0.1,0.1) ;
+   -webkit-transition: transform 10000ms ease-in-out ;
+   -moz-transition: transform 10000ms ease-in-out ;
+   -ms-transition: transform 10000ms ease-in-out ;
+   -o-transition: transform 10000ms ease-in-out ;
 }
 .opencard{
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
+    transform: scale(1,1);
+    -webkit-transform: scale(1,1);
+    -moz-transform: scale(1,1);
+    -ms-transform: scale(1,1);
+    -o-transform: scale(1,1);
 }
 .hidden{
     display: none;
@@ -47,11 +53,12 @@ body{
     /* bottom: 15px; */
     border-color: #658CED;
     border-width: 3px;
+    font-size: 4vh;
     font-weight: 900;
     /* position: absolute; */
     /* margin-top: 0; */
     /* padding-top: 0; */
-    font-size: 30px;
+    /* font-size: ; */
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -59,46 +66,28 @@ body{
     -o-border-radius: 5px;
 }
 .btn:hover{
-    font-size: 28px;
+    font-size: 5vh;
     cursor: pointer;
 }
-.out{
-    /* position: absolute; */
-    /* left: 0;
-    top:0; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: #000;
-    /* width: 100%;
-    height: 100%; */
-}
-.wrap{
-    position: absolute;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-}
 .envelope{
-    top: 150px;
+    top: 15vh;
     position: absolute;
     /* box-sizing: border-box; */
     /* width: 200px; */
     /* height: 200px; */
-    border-top: 100px solid red;
-    border-bottom: 100px solid #C4DFF0;
-    border-right: 150px solid #C4DFF0;
-    border-left: 150px solid #A4D4F2;
+    border-top: 10vh solid red;
+    border-bottom: 10vh solid #C4DFF0;
+    border-right: 15vh solid #C4DFF0;
+    border-left: 15vh solid #A4D4F2;
     z-index: 1;
 }
 .top1{
-    top: 150px;
+    top: 15vh;
     position: absolute;
-    border-top: 100px solid #658CED;
-    border-bottom: 100px solid transparent;
-    border-right: 150px solid transparent;
-    border-left: 150px solid transparent;
+    border-top: 10vh solid #658CED;
+    border-bottom: 10vh solid transparent;
+    border-right: 15vh solid transparent;
+    border-left: 15vh solid transparent;
     z-index: 3;
     transform:rotateX(0deg);
     transform-origin: top;
@@ -106,12 +95,12 @@ body{
 }
 .top2{
     position: absolute;
-    top: 150px;
+    top: 15vh;
     box-sizing: border-box;
-    border-top: 100px solid #3760C9;
-    border-bottom: 100px solid transparent;
-    border-right: 150px solid transparent;
-    border-left: 150px solid transparent;
+    border-top: 10vh solid #3760C9;
+    border-bottom: 10vh solid transparent;
+    border-right: 15vh solid transparent;
+    border-left: 15vh solid transparent;
     z-index: 1;
     transform:rotateX(90deg);
     transform-origin: top;
