--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     /* background-color: #fff; */
+    /* yay */
 }
 .wrap{
     align-items: center;
